--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://yiladien.github.io/madisonolguin",
+  "homepage": "https://www.madisonolguin.com",
   "name": "madison-olguin",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
